Configured client DI, added DbContext, created JWT-token authorization

--- a/Some.Api/appsettings.json
+++ b/Some.Api/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Server=(localdb)\\SQLEXPRESS; Database=SomeDb; TrustServerCertificate=true; Trusted_Connection=true;"
+  },
+  "Jwt": {
+    "Key": "admopmaFOAFIJSOIFPJMWOFNOJO1323I409Uasadqwa"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
