--- a/Some.DataAccess/Some.DataAccess.csproj
+++ b/Some.DataAccess/Some.DataAccess.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Entities\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
   </ItemGroup>
 
 </Project>
